# client-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
driver/src/: actions.rs  aio.rs  ddl.rs  error.rs  lib.rs  util.rs
examples/: Cargo.toml  README.md  custom_types.rs  simple.rs
examples/actions/: Cargo.toml
examples/actions/src/: main.rs
examples/aio/: Cargo.toml
examples/aio/src/: main.rs
examples/array-responses/: Cargo.toml
examples/array-responses/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/custom-queries/: Cargo.toml
examples/custom-queries/src/: main.rs
examples/custom-types/: Cargo.toml
examples/custom-types/src/: main.rs
examples/ddl/: Cargo.toml
examples/ddl/src/: main.rs
examples/derive/: Cargo.toml
examples/derive/src/: main.rs
examples/sync-api/: Cargo.toml
examples/sync-api/src/: main.rs
sky-derive/: Cargo.toml  README.md
sky-derive/src/: lib.rs
skytable/: Cargo.toml  README.md
skytable/src/: lib.rs  types.rs
src/: actions.rs  aio.rs  async_con.rs  config.rs  connection.rs  ddl.rs  deserializer.rs  error.rs  lib.rs  macros.rs  pool.rs  protocol.rs  query.rs  respcode.rs  response.rs  sync.rs  syncio.rs  terrapipe.rs  types.rs  util.rs
src/io/: aio.rs  mod.rs  sync.rs
src/protocol/: handshake.rs  mod.rs  pipe.rs  state.rs
src/v2/: mod.rs
tests/: derive.rs  example.rs  pipe.rs  query.rs
