[package]
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
categories = []
description = "Official Rust client driver for Skytable"
documentation = "https://docs.rs/skytable"
edition = "2018"
keywords = ["skytable", "driver", "client", "database", "nosql"]
license = "Apache-2.0"
name = "skytable"
readme = "README.md"
repository = "https://github.com/skytable/client-rust"
version = "0.7.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sync"]
# sync
sync = ["r2d2"]
# sync TLS
ssl = ["openssl"]
sslv = ["openssl/vendored"]
# async
aio = ["bytes", "tokio", "bb8", "async-trait"]
# async TLS
aio-ssl = ["tokio-openssl", "openssl"]
aio-sslv = ["tokio-openssl", "openssl/vendored"]
# utilities
const-gen = []
dbg = []

[dependencies]
bytes = { version = "1.1.0", optional = true }
openssl = { version = "0.10.40", optional = true }
tokio = { version = "1.18.2", features = [
    "net",
    "io-util",
    "io-std",
], optional = true, default-features = false }
tokio-openssl = { version = "0.6.3", optional = true }
r2d2 = { version = "0.8.9", optional = true }
bb8 = { version = "0.8.0", optional = true }
async-trait = { version = "0.1.53", optional = true }

[dev-dependencies]
tokio = { version = "1.18.2", features = [
    "test-util",
    "macros",
], default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
