[package]
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
categories = []
description = "Official Rust client driver for Skytable"
documentation = "https://docs.rs/skytable"
edition = "2018"
keywords = ["skytable", "driver", "client", "database", "nosql"]
license = "Apache-2.0"
name = "skytable"
readme = "README.md"
repository = "https://github.com/skytable/client-rust"
version = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
native-tls = "0.2.11"
tokio-native-tls = "0.3.1"
