[package]
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
categories = []
description = "Official Rust client driver for Skytable"
documentation = "https://docs.rs/skytable"
edition = "2018"
keywords = ["skytable", "driver", "client", "database", "nosql"]
license = "Apache-2.0"
name = "skytable"
readme = "README.md"
repository = "https://github.com/skytable/client-rust"
version = "0.8.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# internal deps
sky-derive = "0.2.0"
# external deps
tokio = { version = "1.35.1", features = ["full"] }
native-tls = "0.2.11"
tokio-native-tls = "0.3.1"
rand = "0.8.5"
r2d2 = "0.8.10"
async-trait = "0.1.77"
bb8 = "0.8.1"
itoa = "1.0.10"
