[package]
name = "sky-derive"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "Derive macros for Skyhash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.76", features = ["derive"] }
quote = "1.0.9"
