[package]
name = "sky-derive"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "Macros for the Skytable client driver"
homepage = "https://skytable.io"
documentation = "https://docs.rs/skytable"
repository = "https://github.com/skytable/client-rust"
readme = "README.md"

# Cargo.toml for the macro crate
[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
