[package]
name = "actions"
version = "0.1.0"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We use the `const-gen` feature to work with arrays; you can choose to leave it out
skytable = { version = "0.5.0-alpha.2", features = ["const-gen"] }
