[package]
name = "aio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skytable = { path = "../../", features = [
    "const-gen",
    "async",
], default-features = false }
tokio = { version = "1.10.0", features = ["full"] }
