[package]
name = "aio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skytable = { version = "0.7.1", features = [
    "const-gen",
    "aio",
], default-features = false }
tokio = { version = "1.10.0", features = ["full"] }
