[package]
name = "custom-types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skytable = { git = "https://github.com/skytable/client-rust.git", features = [
    "const-gen",
] }
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
